--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="Uah-w6-zL1" id="DYO-jo-kkc"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="TODOEY" id="edd-ge-cTw"/>
+                    <navigationItem key="navigationItem" title="TODOEY" id="edd-ge-cTw">
+                        <barButtonItem key="rightBarButtonItem" title="Add" image="Piu" id="BlT-sl-Wtc">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="Uah-w6-zL1" id="eY3-Pw-fDb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sC2-it-pDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -63,4 +70,7 @@
             <point key="canvasLocation" x="-20" y="4.9475262368815596"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Piu" width="18" height="18"/>
+    </resources>
 </document>
